--- a/baseline.ipynb
+++ b/baseline.ipynb
@@ -23,8 +23,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "MACHINE = 'RoboticArm' # choose between BrushlessMotor and RoboticArm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Paths to the training and testing HDF5 dataset files\n",
-    "MACHINE = 'RoboticArm'\n",
     "TRAIN_DATASET_PATH = f'data/{MACHINE}/windowed/train_dataset_window_0.100s.h5'\n",
     "TEST_DATASET_PATH = f'data/{MACHINE}/windowed/test_dataset_window_0.100s.h5'\n",
     "\n",
