--- a/preprocess.ipynb
+++ b/preprocess.ipynb
@@ -22,8 +22,16 @@
                               "metadata": {},
                               "outputs": [],
                               "source": [
+                                        "MACHINE = 'RoboticArm' # choose between BrushlessMotor and RoboticArm"
+                              ]
+                    },
+                    {
+                              "cell_type": "code",
+                              "execution_count": null,
+                              "metadata": {},
+                              "outputs": [],
+                              "source": [
                                         "# Initializations\n",
-                                        "MACHINE = 'RoboticArm'\n",
                                         "INPUT_FOLDER = f'data/{MACHINE}'\n",
                                         "OUTPUT_FOLDER = f'data/{MACHINE}/windowed'\n",
                                         "os.makedirs(OUTPUT_FOLDER, exist_ok=True)\n",
