--- a/baseline.ipynb
+++ b/baseline.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,18 @@
     "\n",
     "# custom\n",
     "import model\n",
-    "import utilities\n"
+    "import utilities\n",
+    "from datasets.dataset_IMADS import DatasetTrain, DatasetTest, DatasetFromNumpy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "MACHINE = 'BrushlessMotor' # choose between BrushlessMotor and RoboticArm\n",
+    "WINDOW_SIZE_MS = 100 # milliseconds"
    ]
   },
   {
@@ -23,32 +34,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "MACHINE = 'RoboticArm' # choose between BrushlessMotor and RoboticArm"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Paths to the training and testing HDF5 dataset files\n",
-    "TRAIN_DATASET_PATH = f'data/{MACHINE}/windowed/train_dataset_window_0.100s.h5'\n",
-    "TEST_DATASET_PATH = f'data/{MACHINE}/windowed/test_dataset_window_0.100s.h5'\n",
-    "\n",
-    "# List of sensor names to be extracted from the dataset\n",
-    "SENSORS = [\n",
-    "    'imp23absu_mic',\n",
-    "    'ism330dhcx_acc',\n",
-    "    'ism330dhcx_gyro'\n",
-    "]\n",
-    "\n",
-    "# List of label names to be extracted from the dataset\n",
-    "LABEL_NAMES = ['segment_id',\n",
-    "               'split_label',\n",
-    "               'anomaly_label',\n",
-    "               'domain_shift_op',\n",
-    "               'domain_shift_env']\n",
+    "# Get cpu, gpu or mps device for training.\n",
+    "device = (\n",
+    "    \"cuda\"\n",
+    "    if torch.cuda.is_available()\n",
+    "    else \"mps\"\n",
+    "    if torch.backends.mps.is_available()\n",
+    "    else \"cpu\"\n",
+    ")\n",
+    "print(f\"Using {device} device\")\n",
     "\n",
     "PARAMS = {\n",
     "    'layer_dims': [2048, 2048, 2048, 16],\n",
@@ -56,27 +50,25 @@
     "    'criterion': utilities.MSE,\n",
     "    'batch_size': 1024,\n",
     "    'num_epochs': 1000,\n",
-    "    # TO BE ADAPTED TO YOUR MACHINE: either 'mps or 'cuda' if GPU available,\n",
-    "    # otherwise 'cpu'\n",
-    "    'device': 'cuda',\n",
     "    'patience': 3,\n",
-    "    'normalisation': 'std_window',\n",
+    "    'normalisation': 'std_window', # ('std', 'min-max', 'std_window', or 'min-max_window')\n",
     "    'valid_size': 0.1,\n",
-    "    'seed': 1995\n",
+    "    'seed': 1995,\n",
+    "    'device':device\n",
     "}\n",
     "\n",
     "# Set the seed for general torch operations\n",
     "torch.manual_seed(PARAMS['seed'])\n",
     "# Set the seed for MPS torch operations (ones that happen on the MPS Apple GPU)\n",
     "\n",
-    "if PARAMS['device'] == 'mps':\n",
+    "if device == 'mps':\n",
     "    torch.mps.manual_seed(PARAMS['seed'])\n",
-    "elif PARAMS['device'] == 'cuda':\n",
+    "elif device == 'cuda':\n",
     "    torch.cuda.manual_seed(PARAMS['seed'])\n",
-    "elif PARAMS['device'] == 'cpu':\n",
+    "elif device == 'cpu':\n",
     "    torch.manual_seed(PARAMS['seed'])\n",
     "else:\n",
-    "    raise ValueError(f\"Unsupported device type: {PARAMS['device']}\")\n"
+    "    raise ValueError(f\"Wrong device value: {device}\")"
    ]
   },
   {
@@ -85,55 +77,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load the dataset\n",
-    "X_train_raw, Y_train_raw, X_test, Y_test = utilities.load_dataset(\n",
-    "    TRAIN_DATASET_PATH, TEST_DATASET_PATH, LABEL_NAMES, SENSORS)\n",
-    "\n",
-    "# Combine anomaly labels and domain shift labels to form a combined label\n",
-    "Y_train_raw['combined_label'] = Y_train_raw['anomaly_label'] + \\\n",
-    "    Y_train_raw['domain_shift_op'] + Y_train_raw['domain_shift_env']\n",
-    "Y_test['combined_label'] = Y_test['anomaly_label'] + \\\n",
-    "    Y_test['domain_shift_op'] + Y_test['domain_shift_env']\n",
-    "\n",
-    "# Split training data into training and validation sets, maintaining the\n",
-    "# stratified distribution of the combined label\n",
-    "train_indices, valid_indices, _, _ = train_test_split(\n",
-    "    range(len(Y_train_raw)),\n",
-    "    Y_train_raw,\n",
-    "    stratify=Y_train_raw['combined_label'],\n",
-    "    test_size=PARAMS['valid_size'],\n",
-    "    random_state=PARAMS['seed']\n",
-    ")\n",
-    "\n",
-    "# Select the training and validation data based on the indices\n",
-    "X_train = [sensor_data[train_indices] for sensor_data in X_train_raw]\n",
-    "X_valid = [sensor_data[valid_indices] for sensor_data in X_train_raw]\n",
-    "Y_train = Y_train_raw.iloc[train_indices].reset_index(drop=True)\n",
-    "Y_valid = Y_train_raw.iloc[valid_indices].reset_index(drop=True)\n",
-    "\n",
-    "# Normalize the training, validation, and test datasets using the\n",
-    "# specified normalization method\n",
-    "X_train, X_valid, X_test = utilities.normalize_data(\n",
-    "    X_train, X_valid, X_test, PARAMS['normalisation'])\n",
-    "\n",
-    "# Extract the number of channels and window lengths for each sensor\n",
-    "NUM_CHANNELS = [x.shape[1] for x in X_train]\n",
-    "WINDOW_LENGTHS = [x.shape[2] for x in X_train]\n",
-    "\n",
-    "X_train_tensor = [torch.from_numpy(x).to(PARAMS['device']) for x in X_train]\n",
-    "X_valid_tensor = [torch.from_numpy(x).to(PARAMS['device']) for x in X_valid]\n",
-    "X_test_tensor = [torch.from_numpy(x).to(PARAMS['device']) for x in X_test]\n",
-    "\n",
-    "train_dataset = utilities.CustomDataset(X_train_tensor)\n",
-    "valid_dataset = utilities.CustomDataset(X_valid_tensor)\n",
-    "test_dataset = utilities.CustomDataset(X_test_tensor)\n",
+    "train_dataset = DatasetTrain(machine=MACHINE, window_size_ms=WINDOW_SIZE_MS, params=PARAMS)\n",
+    "X_valid, y_valid = train_dataset.get_valid_dataset()\n",
+    "valid_dataset = DatasetFromNumpy(X_valid, y_valid['anomaly_label'].to_list(), device, PARAMS['normalisation'])\n",
+    "test_dataset = DatasetTest(machine=MACHINE, window_size_ms=WINDOW_SIZE_MS, params=PARAMS)\n",
     "\n",
     "train_data_loader = DataLoader(\n",
     "    train_dataset, batch_size=PARAMS['batch_size'], shuffle=True)\n",
     "valid_data_loader = DataLoader(\n",
     "    valid_dataset, batch_size=PARAMS['batch_size'], shuffle=False)\n",
     "test_data_loader = DataLoader(\n",
-    "    test_dataset, batch_size=PARAMS['batch_size'], shuffle=False)\n"
+    "    test_dataset, batch_size=PARAMS['batch_size'], shuffle=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Extract the number of channels and window lengths for each sensor\\n\",\n",
+    "NUM_CHANNELS = [x.shape[1] for x in train_dataset.X]\n",
+    "WINDOW_LENGTHS = [x.shape[2] for x in train_dataset.X]\n",
+    "SENSORS = train_dataset.sensor_dict"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Train"
    ]
   },
   {
@@ -144,8 +117,16 @@
    "source": [
     "baseline = model.AutoencoderFC(WINDOW_LENGTHS, NUM_CHANNELS, PARAMS, SENSORS)\n",
     "optimizer = torch.optim.Adam(baseline.parameters(), lr=PARAMS['lr'])\n",
-    "baseline.fit(train_data_loader, valid_data_loader, optimizer)\n",
-    "AUC_scores = baseline.test(test_data_loader, Y_test, utilities.MSE, 'median')\n"
+    "baseline.fit(train_data_loader, valid_data_loader, optimizer)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "AUC_scores = baseline.test(test_data_loader, test_dataset.y, utilities.MSE, 'median')\n"
    ]
   },
   {
